Add requestedVersion to RecipeBundle